Fixed dashboard sidebar spacing

--- a/src/Nav/nav.scss
+++ b/src/Nav/nav.scss
@@ -197,7 +197,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 4rem;
 
   &__item {
     min-height: 5rem;
